--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-	<center><h1>HelloWorld</h1></center>
+	<center><h1>HelloWorld</h1>
+		<a href="http://bermnoi.p.ht">bermnoi</a>
+	</center>
 </body>
 
 </html>
